# LPacked

./: .gitignore  Makefile.am  autogen.sh  configure.ac
src/: .gitignore  Makefile.am  application.c  application.h  blob.c  blob.h  builder.c  builder.h  compat.c  compat.h  descriptor.c  descriptor.h  exec.lua  execute.c  execute.h  format.h  init.lua  lpacked.c  luaerror.h  main.lua  pack.c  pack.h  pack.lua  package.c  package.h  readaux.h  reader.c  reader.h  resources.xml  serialization.lua
src/gvdb/: gvdb-builder.c  gvdb-builder.h
